--- a/metadata.yaml
+++ b/metadata.yaml
@@ -38,5 +38,6 @@ subjects:
 - !lcsh 'Children''s poetry'
 - !lcc 'PZ'
 - !lcsh 'Goblins -- Juvenile poetry'
+- GITenberg
 title: Little Orphan Annie, and Billy Miller's Circus-Show
 url: http://www.gutenberg.org/ebooks/45239
